[GTK] WTR: Native HTML form validation popover is not supported https://bugs.webkit.org/show_bug.cgi?id=167579

Reviewed by Carlos Garcia Campos.

This change enables form-validation-related tests. To this end, two APIs called
overridePreference and contentsOfUserInterfaceItem are added to UIScriptController.

Source/WebKit:

WebKitWebViewBase implements contentsOfUserInterfaceItem for UIScriptController
necessary for webkit tests. It returns a font size and an actual message of a validation
bubble in the dictionary format. For overridePreference, we directly call WKPreference API
in WKView.cpp

No new tests since this change is the enabler of existing tests.

* UIProcess/API/C/gtk/WKView.cpp:
(WKViewContentsOfUserInterfaceItem):
* UIProcess/API/C/gtk/WKViewPrivate.h:
* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseContentsOfUserInterfaceItem):
* UIProcess/API/gtk/WebKitWebViewBasePrivate.h:

Tools:

UIScriptController.overridePreference configures the minimum font size of the validation bubbles
and UIScriptController.contentsOfUserInterfaceItem returns an actual bubble message along with its font size
in a json object.

* WebKitTestRunner/TestController.h: Make paltformPreferences public.
* WebKitTestRunner/gtk/UIScriptControllerGtk.cpp:
(WTR::UIScriptControllerGtk::overridePreference):
(WTR::toJSONObject):
(WTR::UIScriptControllerGtk::contentsOfUserInterfaceItem const):
* WebKitTestRunner/gtk/UIScriptControllerGtk.h:

LayoutTests:

We configure the minimum font size of the validation bubbles via UIScriptController.overridePreference
and retrieve a message and its font size through UIScriptController.contentsOfUserInterfaceItem.

* platform/gtk/TestExpectations: Enable form validation related tests we can perform with
  native bubble widgets but skip ones related to HTML-based form validation as Cocoa-based ports do.



Canonical link: https://commits.webkit.org/246472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288666 268f45cc-cd09-0410-ab3c-d52691b4dbfc